# mcp-sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  BUGFIX_SPRINT_RESULTS.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE_STATUS.md  GETTING_STARTED.md  GITHUB_UPLOAD_INSTRUCTIONS.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  Jenkinsfile  LESSONS_LEARNED.md  LICENSE  PHASE_4.2.1_PLAN.md  PHASE_4.2.1_PROGRESS_REPORT.md  PHASE_4.2_ROADMAP.md  PROJECT_STATUS.md  PYTHON_REWRITE_ARCHITECTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0-beta.1.md  RESTRUCTURE_VERIFICATION.md  ROADMAP.md  SECURITY.md  SECURITY_ANALYSIS_AND_ROADMAP.md  SESSION_LOG.md  TUTORIAL.md  UNUSED_CODE.md  VULNERABILITY_COMPARISON.md  WORK_CONTEXT.md  docker-compose-cli.yml  docker-compose.mcp-samples.yml  docker-compose.yml  populate_kb_script.py  pyproject.toml  test-report.xmlst  (+1 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.sentinel/: cache.json
TALLY_PROJECT/: README.md  TALLY_ARCHITECTURE.md  (+1 more)
mcp-sentinel-python/: .env.example  .gitignore  LESSONS_LEARNED.md  MANIFEST.in  PHASE_4_AUDIT.md  PROJECT_STATUS.md  README.md  UPLOAD_TO_GITHUB.bat  UPLOAD_TO_GITHUB.sh  docker-compose.sanity.yml  docker-compose.simple.yml  pyproject.toml
mcp-sentinel-python/.github/workflows/: ci.yml
mcp-sentinel-python/docs/: API_DESIGN_SPECIFICATION.md  ARCHITECTURE.md  CONTRIBUTING.md  ERROR_HANDLING_STRATEGY.md  LESSONS_LEARNED.md  PHASE_4_PLAN.md  PRE_RELEASE_CHECKLIST.md  README.md  RELEASE_PROCESS.md  REPORTING_ARCHITECTURE_AND_WORKFLOWS.md  TEST_STRATEGY.md  USER_GUIDE.md  VULNERABILITY_COMPARISON.md  ZERO_DAY_ROADMAP.md
mcp-sentinel-python/docs/external-scans/: GITHUB_MCP_SERVER_SCAN_2026-04-28.md  MCP_FILESYSTEM_SUBFOLDER_SCAN_2026-04-28.md
mcp-sentinel-python/scripts/: clone_fork_test_targets.ps1  clone_fork_test_targets.sh  generate_scan_summary_pdf.py
mcp-sentinel-python/src/mcp_sentinel/: __init__.py
mcp-sentinel-python/src/mcp_sentinel/cli/: main.py
mcp-sentinel-python/src/mcp_sentinel/core/: __init__.py  config.py  multi_engine_scanner.py  scanner.py  tool_versioning.py
mcp-sentinel-python/src/mcp_sentinel/detectors/: __init__.py  code_injection.py  config_security.py  path_traversal.py  prompt_injection.py  prototype_pollution.py  secrets.py  supply_chain.py  tool_poisoning.py  xss.py
mcp-sentinel-python/src/mcp_sentinel/engines/: __init__.py  base.py
mcp-sentinel-python/src/mcp_sentinel/engines/sast/: __init__.py  sast_engine.py  semgrep_adapter.py
mcp-sentinel-python/src/mcp_sentinel/engines/static/: __init__.py  static_engine.py
mcp-sentinel-python/src/mcp_sentinel/models/: __init__.py  executive_assessment.py  scan_result.py  vulnerability.py
mcp-sentinel-python/src/mcp_sentinel/probing/: __init__.py  discovery.py  heuristics.py  models.py  orchestrator.py
mcp-sentinel-python/src/mcp_sentinel/reporting/: executive_assessment.py
mcp-sentinel-python/src/mcp_sentinel/reporting/generators/: __init__.py  html_generator.py  incident_summary_generator.py  pdf_generator.py  sarif_generator.py
mcp-sentinel-python/src/mcp_sentinel/threat_intel/: __init__.py  enricher.py  vulnerable_mcp.py
mcp-sentinel-python/tests/: conftest.py  fork_targets.manifest  test_sast_engine.py
mcp-sentinel-python/tests/fixtures/: vulnerable_code_injection.js  vulnerable_code_injection.py
mcp-sentinel-python/tests/integration/: test_external_fork_smoke.py  test_report_generators.py  test_scanner.py  test_static_detectors_integration.py
mcp-sentinel-python/tests/unit/: test_cli_scan_exit.py  test_code_injection.py  test_config_fingerprint.py  test_config_security.py  test_executive_assessment.py  test_multi_engine_scanner.py  test_path_traversal.py  test_probing_discovery.py  test_probing_heuristics.py  test_prompt_injection.py  test_prototype_pollution.py  test_secrets_detector.py  test_static_engine.py  test_supply_chain.py  test_tool_poisoning.py  test_tool_versioning.py  test_vulnerable_mcp.py  test_xss.py
rust-legacy/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
rust-legacy/docs/: ARCHITECTURE.md  ARCHITECTURE_PHASE_2_5.md  ATTACK_VECTORS.md  CHEATSHEET.md  CI_CD_INTEGRATION.md  CLI_REFERENCE.md  DOCKER.md  DOCKER_PUBLISHING.md  GIF_RECORDING_GUIDE.md  IDE_INTEGRATION_PLAN.md  NETWORK_DIAGRAMS.md  QA_AUDIT_PHASE_2_5.md  QA_CHECKLIST.md  README.md  RELEASE_COMPARISON.md  RELEASE_PROCESS.md  RESEARCH_POSITIONING.md  TEST_STRATEGY.md
rust-legacy/docs/examples/: threat_intel_usage.rs
rust-legacy/docs/releases/: RELEASE_NOTES_v2.6.0.md
rust-legacy/docs/samples/: README.md  README_v2.6.0.md  scan_results.json  scan_results_v2.6.0.json  terminal_output_comprehensive.txt  terminal_output_v2.6.0.txt
rust-legacy/docs/versions/v2.6/: architecture.md  final-review.md  progress.md
rust-legacy/src/: config.rs  lib.rs  main.rs  scanner.rs
rust-legacy/src/cli/: audit.rs  errors.rs  init.rs  mod.rs  monitor.rs  proxy.rs  rules.rs  scan.rs  types.rs  whitelist.rs
rust-legacy/src/detectors/: code_vulns.rs  mcp_config.rs  mcp_tools.rs  mod.rs  package_confusion.rs  prompt_injection.rs  secrets.rs  tool_poisoning.rs
rust-legacy/src/engines/: ai_analysis.rs  mod.rs  semantic.rs  semgrep.rs
rust-legacy/src/engines/static_analysis/: mod.rs  patterns.rs
rust-legacy/src/models/: ai_finding.rs  config.rs  mcp_protocol.rs  mod.rs  scan_result.rs  vulnerability.rs
rust-legacy/src/output/: html.rs  json.rs  mod.rs  sarif.rs  terminal.rs
rust-legacy/src/providers/: anthropic.rs  azure.rs  cohere.rs  google.rs  huggingface.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  registry.rs
rust-legacy/src/storage/: baseline.rs  cache.rs  mod.rs
rust-legacy/src/suppression/: auditor.rs  matcher.rs  mod.rs  parser.rs
rust-legacy/src/threat_intel/: mitre_attack.rs  mod.rs  nvd.rs  vulnerable_mcp.rs
rust-legacy/src/utils/: config.rs  file.rs  git.rs  github.rs  mod.rs
rust-legacy/tests/: integration_phase_2_5.rs  integration_phase_2_6.rs
rust-legacy/tests/fixtures/vulnerable_servers/test-server/: server.py
(+306 files in other folders)
