[tool.poetry]
name = "mcp-sentinel"
version = "4.1.0"
description = "Security scanner for Model Context Protocol (MCP) servers"
authors = ["MCP Sentinel Team <team@mcp-sentinel.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/beejak/mcp-sentinel"
repository = "https://github.com/beejak/mcp-sentinel"
documentation = "https://github.com/beejak/mcp-sentinel/tree/master/docs"
keywords = ["security", "mcp", "scanner", "vulnerability", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.9"

# Core
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Async & File I/O
aiofiles = "^23.2.1"

# CLI & Output
click = "^8.1.7"
rich = "^13.7.0"
questionary = "^2.0.1"
python-dotenv = "^1.0.0"

# Testing & Quality
pytest = "^7.4.4"
pytest-asyncio = "~0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.96.1"
mypy = "^1.8.0"
black = "^23.12.1"
ruff = "^0.1.11"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
ipdb = "^0.13.13"
pytest-watch = "^4.2.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
mcp-sentinel = "mcp_sentinel.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "mcp_sentinel.cli.main"
# click decorators don't preserve type signatures — inherent to click's design
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=mcp_sentinel --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
