[tool.poetry]
name = "mcp-sentinel"
version = "3.0.0"
description = "Enterprise-grade security scanner for Model Context Protocol (MCP) servers"
authors = ["MCP Sentinel Team <team@mcp-sentinel.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcp-sentinel/mcp-sentinel-python"
repository = "https://github.com/mcp-sentinel/mcp-sentinel-python"
documentation = "https://docs.mcp-sentinel.dev"
keywords = ["security", "mcp", "scanner", "vulnerability", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
fastapi = "^0.109.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"

# Async & Performance
uvicorn = {extras = ["standard"], version = "^0.26.0"}
uvloop = "^0.19.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
aiocache = "^0.12.2"
asyncpg = "^0.29.0"
msgpack = "^1.0.7"

# AI/ML Integration
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.0.1"
langchain-google-genai = "^0.0.5"
anthropic = "^0.8.1"
openai = "^1.6.1"
transformers = "^4.36.2"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.22"

# Code Analysis
tree-sitter = "^0.20.4"
tree-sitter-python = "^0.20.4"
tree-sitter-javascript = "^0.20.3"
tree-sitter-typescript = "^0.20.3"
libcst = "^1.1.0"
semgrep = "^1.55.2"
bandit = "^1.7.6"

# API & Microservices
strawberry-graphql = {extras = ["fastapi"], version = "^0.217.1"}
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

# Database & Storage
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.19"
elasticsearch = "^8.11.1"

# Security & Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
cryptography = "^41.0.7"
hvac = "^2.1.0"

# Testing & Quality
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.96.1"
locust = "^2.20.0"
mypy = "^1.8.0"
black = "^23.12.1"
ruff = "^0.1.11"

# Enterprise Integrations
jira = "^3.6.0"
slack-sdk = "^3.26.1"
PyGithub = "^2.1.1"
python-gitlab = "^4.4.0"
pdpyras = "^5.2.0"
splunk-sdk = "^2.0.1"

# Reporting & Analytics
pandas = "^2.1.4"
plotly = "^5.18.0"
reportlab = "^4.0.9"
openpyxl = "^3.1.2"
jinja2 = "^3.1.3"
weasyprint = "^60.2"
markdown = "^3.5.2"

# Monitoring & Observability
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
structlog = "^24.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
datadog = "^0.49.1"

# CLI & Utilities
click = "^8.1.7"
rich = "^13.7.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
ipdb = "^0.13.13"
pytest-watch = "^4.2.0"
pre-commit = "^3.6.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.scripts]
mcp-sentinel = "mcp_sentinel.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "semgrep.*",
    "bandit.*",
    "jira.*",
    "slack_sdk.*",
    "pdpyras.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=mcp_sentinel --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
